--- a/_extensions/grantmcdermott/clean/clean.scss
+++ b/_extensions/grantmcdermott/clean/clean.scss
@@ -331,3 +331,7 @@ $selection-bg: #26351c !default;
 .reveal .math-display {
   font-size: 0.8em; // Adjust this value as needed
 }
+
+.highlight-custom {
+  color: $accent;
+}
